# EchoBrief

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
core/: __init__.py  chunking.py  cli.py  config.py  export.py  health.py  insights.py  prompts.py  schemas.py  speech.py  transcription.py
docs/: DESIGN.md  model-eval.md
scripts/: benchmark.py
tests/: test_app.py  test_chunking.py  test_cli.py  test_config.py  test_export.py  test_health.py  test_insights.py  test_prompts.py  test_schemas.py  test_smoke.py  test_speech.py  test_transcription.py
