[project]
name = "echobrief"
version = "0.1.0"
description = "Turn recorded calls into summaries, insights, and tracked next steps — 100% locally."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "streamlit>=1.59.2",
]

[project.scripts]
echobrief = "core.cli:main"

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: slow tests that use real models (run with: pytest -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
